--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,12 @@
     "dev": "node --watch server.js",
     "seed": "node scripts/seedDatabase.js"
   },
-  "keywords": ["sat", "vocabulary", "quiz", "flashcard"],
+  "keywords": [
+    "sat",
+    "vocabulary",
+    "quiz",
+    "flashcard"
+  ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
@@ -20,6 +25,7 @@
     "express-session": "^1.18.2",
     "mongoose": "^9.1.1",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "xlsx": "^0.18.5"
   }
 }
